--- a/identity.html
+++ b/identity.html
@@ -65,9 +65,9 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
             <tr>
               <td class="title">Permissions:</td>
               <td>
-                  <span class="code">
+                  <code class="code">
                   "identity"
-                          </span>
+                          </code>
                   <br>
               </td>
             </tr>
@@ -85,7 +85,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                </h3>
                <div class="summary uncapitalize">
                <div class="line">
-               <span>chrome.identity.getAuthToken</span>(<span class="optional">object details</span>, <span>function callback</span>)
+               <code>chrome.identity.getAuthToken</code>(<code class="optional">object details</code>, <code>function callback</code>)
                </div>
                </div>
                <div class="description">
@@ -100,12 +100,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-getAuthToken-details" title="">
                              details
-                             <span class="property">
+                             <code class="property">
                                (
-                                 <span class="optional">optional</span>
+                                 <code class="optional">optional</code>
                                  object
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -121,12 +121,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                <dt>
                                  <h4 id="property-details-interactive" title="">
                                    interactive
-                                   <span class="property">
+                                   <code class="property">
                                      (
-                                       <span class="optional">optional</span>
+                                       <code class="optional">optional</code>
                                        boolean
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -143,11 +143,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-getAuthToken-callback" title="">
                              callback
-                             <span class="property">
+                             <code class="property">
                                (
                                  function
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -160,7 +160,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          The <em>callback</em> parameter should specify a function
                          that looks like this:
                    </p>
-                   <pre>function(string token) <span class="subdued">{...}</span>;</pre>
+                   <pre>function(string token) <code class="subdued">{...}</code>;</pre>
                    <dl>
                        <div>
                          <a name="property-callback-token"></a>
@@ -168,12 +168,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                            <dt>
                              <h4 id="property-callback-token" title="">
                                token
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -190,7 +190,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                </h3>
                <div class="summary uncapitalize">
                <div class="line">
-               <span>chrome.identity.removeCachedAuthToken</span>(<span>object details</span>, <span>function callback</span>)
+               <code>chrome.identity.removeCachedAuthToken</code>(<code>object details</code>, <code>function callback</code>)
                </div>
                </div>
                <div class="description">
@@ -205,11 +205,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-removeCachedAuthToken-details" title="">
                              details
-                             <span class="property">
+                             <code class="property">
                                (
                                  object
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -225,11 +225,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                <dt>
                                  <h4 id="property-details-token" title="">
                                    token
-                                   <span class="property">
+                                   <code class="property">
                                      (
                                        string
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -246,11 +246,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-removeCachedAuthToken-callback" title="">
                              callback
-                             <span class="property">
+                             <code class="property">
                                (
                                  function
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -263,7 +263,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          The <em>callback</em> parameter should specify a function
                          that looks like this:
                    </p>
-                   <pre>function() <span class="subdued">{...}</span>;</pre>
+                   <pre>function() <code class="subdued">{...}</code>;</pre>
                </div>
              </div>
              <div>
@@ -273,7 +273,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                </h3>
                <div class="summary uncapitalize">
                <div class="line">
-               <span>chrome.identity.launchWebAuthFlow</span>(<span>object details</span>, <span>function callback</span>)
+               <code>chrome.identity.launchWebAuthFlow</code>(<code>object details</code>, <code>function callback</code>)
                </div>
                </div>
                <div class="description">
@@ -288,11 +288,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-launchWebAuthFlow-details" title="">
                              details
-                             <span class="property">
+                             <code class="property">
                                (
                                  object
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -308,11 +308,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                <dt>
                                  <h4 id="property-details-url" title="">
                                    url
-                                   <span class="property">
+                                   <code class="property">
                                      (
                                        string
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -325,12 +325,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                <dt>
                                  <h4 id="property-details-interactive" title="">
                                    interactive
-                                   <span class="property">
+                                   <code class="property">
                                      (
-                                       <span class="optional">optional</span>
+                                       <code class="optional">optional</code>
                                        boolean
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -347,11 +347,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-launchWebAuthFlow-callback" title="">
                              callback
-                             <span class="property">
+                             <code class="property">
                                (
                                  function
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -364,7 +364,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          The <em>callback</em> parameter should specify a function
                          that looks like this:
                    </p>
-                   <pre>function(string responseUrl) <span class="subdued">{...}</span>;</pre>
+                   <pre>function(string responseUrl) <code class="subdued">{...}</code>;</pre>
                    <dl>
                        <div>
                          <a name="property-callback-responseUrl"></a>
@@ -372,12 +372,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                            <dt>
                              <h4 id="property-callback-responseUrl" title="">
                                responseUrl
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -394,7 +394,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                </h3>
                <div class="summary">
                <div class="line">
-               <span>string chrome.identity.getRedirectURL</span>(<span class="optional">string path</span>)
+               <code>string chrome.identity.getRedirectURL</code>(<code class="optional">string path</code>)
                </div>
                </div>
                <div class="description">
@@ -409,12 +409,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                          <dt>
                            <h4 id="property-getRedirectURL-path" title="">
                              path
-                             <span class="property">
+                             <code class="property">
                                (
-                                 <span class="optional">optional</span>
+                                 <code class="optional">optional</code>
                                  string
                                )
-                             </span>
+                             </code>
                            </h4>
                          </dt>
                          <dd>
@@ -437,7 +437,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                      </h4>
                      <div class="summary uncapitalize">
                      <div class="line">
-                     <span>chrome.identity.onSignInChanged.addListener</span>(<span>function callback</span>)
+                     <code>chrome.identity.onSignInChanged.addListener</code>(<code>function callback</code>)
                      </div>
                      </div>
                      <div class="description">
@@ -449,11 +449,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                <dt>
                                  <h4 id="property-onSignInChanged-callback" title="">
                                    callback
-                                   <span class="property">
+                                   <code class="property">
                                      (
                                        function
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -465,7 +465,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                The <em>callback</em> parameter should specify a function
                                that looks like this:
                          </p>
-                         <pre>function(object account, boolean signedIn) <span class="subdued">{...}</span>;</pre>
+                         <pre>function(object account, boolean signedIn) <code class="subdued">{...}</code>;</pre>
                          <dl>
                              <div>
                                <a name="property-onSignInChanged-account"></a>
@@ -473,11 +473,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                  <dt>
                                    <h4 id="property-onSignInChanged-account" title="">
                                      account
-                                     <span class="property">
+                                     <code class="property">
                                        (
                                          object
                                        )
-                                     </span>
+                                     </code>
                                    </h4>
                                  </dt>
                                  <dd>
@@ -492,11 +492,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                        <dt>
                                          <h4 id="property-account-id" title="">
                                            id
-                                           <span class="property">
+                                           <code class="property">
                                              (
                                                string
                                              )
-                                           </span>
+                                           </code>
                                          </h4>
                                        </dt>
                                        <dd>
@@ -513,11 +513,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/identity.html
                                  <dt>
                                    <h4 id="property-onSignInChanged-signedIn" title="">
                                      signedIn
-                                     <span class="property">
+                                     <code class="property">
                                        (
                                          boolean
                                        )
-                                     </span>
+                                     </code>
                                    </h4>
                                  </dt>
                                  <dd>
