--- a/power.html
+++ b/power.html
@@ -58,9 +58,9 @@ originalsource: http://developer.chrome.com/extensions/power.html
           <tr>
             <td class="title">Permissions:</td>
             <td>
-                <span class="code">
+                <code class="code">
                 "power"
-                        </span>
+                        </code>
                 <br>
             </td>
           </tr>
@@ -131,7 +131,7 @@ originalsource: http://developer.chrome.com/extensions/power.html
               </h3>
               <div class="summary uncapitalize">
               <div class="line">
-              <span>chrome.power.requestKeepAwake</span>(<span><a href="power.html#type-Level">Level</a> level</span>)
+              <code>chrome.power.requestKeepAwake</code>(<code><a href="power.html#type-Level">Level</a> level</code>)
               </div>
               </div>
               <div class="description">
@@ -146,11 +146,11 @@ originalsource: http://developer.chrome.com/extensions/power.html
                         <dt>
                           <h4 id="property-requestKeepAwake-level" title="">
                             level
-                            <span class="property">
+                            <code class="property">
                               (
                                 <a href="power.html#type-Level">Level</a>
                               )
-                            </span>
+                            </code>
                           </h4>
                         </dt>
                         <dd>
@@ -167,7 +167,7 @@ originalsource: http://developer.chrome.com/extensions/power.html
               </h3>
               <div class="summary uncapitalize">
               <div class="line">
-              <span>chrome.power.releaseKeepAwake</span>()
+              <code>chrome.power.releaseKeepAwake</code>()
               </div>
               </div>
               <div class="description">
