--- a/proxy.html
+++ b/proxy.html
@@ -1,7 +1,7 @@
 ---
 layout: default-withsidebar
 title: chrome.proxy
-support: 19
+support: 20
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
 ---
@@ -31,9 +31,9 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
             <tr>
               <td class="title">Permissions:</td>
               <td>
-                  <span class="code">
+                  <code class="code">
                   "proxy"
-                          </span>
+                          </code>
                   <br>
               </td>
             </tr>
@@ -60,12 +60,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyServer-scheme" title="">
                                scheme
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    enum of <code>"http"</code>, <code>"https"</code>, <code>"socks4"</code>, or <code>"socks5"</code>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -78,11 +78,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyServer-host" title="">
                                host
-                               <span class="property">
+                               <code class="property">
                                  (
                                    string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -95,12 +95,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyServer-port" title="">
                                port
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    integer
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -127,12 +127,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-singleProxy" title="">
                                singleProxy
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyServer">ProxyServer</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -145,12 +145,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-proxyForHttp" title="">
                                proxyForHttp
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyServer">ProxyServer</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -163,12 +163,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-proxyForHttps" title="">
                                proxyForHttps
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyServer">ProxyServer</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -181,12 +181,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-proxyForFtp" title="">
                                proxyForFtp
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyServer">ProxyServer</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -199,12 +199,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-fallbackProxy" title="">
                                fallbackProxy
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyServer">ProxyServer</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -217,12 +217,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyRules-bypassList" title="">
                                bypassList
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    array of string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -249,12 +249,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-PacScript-url" title="">
                                url
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -267,12 +267,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-PacScript-data" title="">
                                data
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    string
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -285,12 +285,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-PacScript-mandatory" title="">
                                mandatory
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    boolean
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -317,12 +317,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyConfig-rules" title="">
                                rules
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-ProxyRules">ProxyRules</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -335,12 +335,12 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyConfig-pacScript" title="">
                                pacScript
-                               <span class="property">
+                               <code class="property">
                                  (
-                                   <span class="optional">optional</span>
+                                   <code class="optional">optional</code>
                                    <a href="proxy.html#type-PacScript">PacScript</a>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -353,11 +353,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                            <dt>
                              <h4 id="property-ProxyConfig-mode" title="">
                                mode
-                               <span class="property">
+                               <code class="property">
                                  (
                                    enum of <code>"direct"</code>, <code>"auto_detect"</code>, <code>"pac_script"</code>, <code>"fixed_servers"</code>, or <code>"system"</code>
                                  )
-                               </span>
+                               </code>
                              </h4>
                            </dt>
                            <dd>
@@ -376,7 +376,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                  <div class="line">chrome.proxy.settings</div>
                </div>
                <div>
-                 <dt><span class="property">settings</span> <span class="type_name">  (  <a href="types.html#type-ChromeSetting">types.ChromeSetting</a>  )</span></dt>
+                 <dt><code class="property">settings</code> <code class="type_name">  (  <a href="types.html#type-ChromeSetting">types.ChromeSetting</a>  )</code></dt>
              <dd>
                    Proxy settings to be used. The value of this setting is a ProxyConfig object.
                  </dd>  </div>
@@ -393,7 +393,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                      </h4>
                      <div class="summary uncapitalize">
                      <div class="line">
-                     <span>chrome.proxy.onProxyError.addListener</span>(<span>function callback</span>)
+                     <code>chrome.proxy.onProxyError.addListener</code>(<code>function callback</code>)
                      </div>
                      </div>
                      <div class="description">
@@ -405,11 +405,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                <dt>
                                  <h4 id="property-onProxyError-callback" title="">
                                    callback
-                                   <span class="property">
+                                   <code class="property">
                                      (
                                        function
                                      )
-                                   </span>
+                                   </code>
                                  </h4>
                                </dt>
                                <dd>
@@ -421,7 +421,7 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                The <em>callback</em> parameter should specify a function
                                that looks like this:
                          </p>
-                         <pre>function(object details) <span class="subdued">{...}</span>;</pre>
+                         <pre>function(object details) <code class="subdued">{...}</code>;</pre>
                          <dl>
                              <div>
                                <a name="property-onProxyError-details"></a>
@@ -429,11 +429,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                  <dt>
                                    <h4 id="property-onProxyError-details" title="">
                                      details
-                                     <span class="property">
+                                     <code class="property">
                                        (
                                          object
                                        )
-                                     </span>
+                                     </code>
                                    </h4>
                                  </dt>
                                  <dd>
@@ -448,11 +448,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                        <dt>
                                          <h4 id="property-details-fatal" title="">
                                            fatal
-                                           <span class="property">
+                                           <code class="property">
                                              (
                                                boolean
                                              )
-                                           </span>
+                                           </code>
                                          </h4>
                                        </dt>
                                        <dd>
@@ -465,11 +465,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                        <dt>
                                          <h4 id="property-details-error" title="">
                                            error
-                                           <span class="property">
+                                           <code class="property">
                                              (
                                                string
                                              )
-                                           </span>
+                                           </code>
                                          </h4>
                                        </dt>
                                        <dd>
@@ -482,11 +482,11 @@ originalsource: http://developer.chrome.com/trunk/extensions/proxy.html
                                        <dt>
                                          <h4 id="property-details-details" title="">
                                            details
-                                           <span class="property">
+                                           <code class="property">
                                              (
                                                string
                                              )
-                                           </span>
+                                           </code>
                                          </h4>
                                        </dt>
                                        <dd>
