--- a/tut_optional_permissions.html
+++ b/tut_optional_permissions.html
@@ -109,8 +109,7 @@ document.querySelector('#my-button').addEventListener('click', function (event) 
 </p>
 
 <p>
-Opera prompts the user if adding the permissions results in different
-<a href="permission_warnings.html">warning messages</a> than the user has
+Opera prompts the user if adding the permissions results in different warning messages than the user has
 already seen and accepted.
 
 <h2 id="contains"> Step 4: Check the extension's current permissions </h2>
