--- a/tut_npapi.html
+++ b/tut_npapi.html
@@ -5,6 +5,9 @@ support: 16
 copyright: opera-google-ccby
 originalsource: http://developer.chrome.com/extensions/npapi.html
 ---
+<p class="alert"><strong>Warning:</strong> NPAPI support will be deprecated from Opera 20 onward. We recommend converting your extension to use other extension APIs or <a href="tut_message_passing.html#native_messaging">native messaging</a> instead.</p>
+
+
 <h2 id="introduction">Introduction</h2>
 
 <p>
@@ -12,9 +15,7 @@ Leveraging HTML and JavaScript makes developing new extensions really easy,
 but what if you have existing legacy or proprietary code that you want to reuse in your extension? In that case, you can bundle an NPAPI plugin with your extension, allowing you to call into native binary code from JavaScript.
 </p>
 
-<p class="alert"><strong>Warning:</strong> NPAPI is a really big hammer that should only be used when no other approach will work.</p>
-
-<p>Code running in an NPAPI plugin has the full permissions of the current user and is not sandboxed or shielded from malicious input by Opera in any way. You should be especially cautious when processing input from untrusted sources, such as when working with <a href="content_scripts.html#security-considerations">content scripts</a> or XMLHttpRequest.</p>
+<p>Code running in an NPAPI plugin has the full permissions of the current user and is not sandboxed or shielded from malicious input by Opera in any way. You should be especially cautious when processing input from untrusted sources, such as when working with content scripts or XMLHttpRequest.</p>
 
 <h2 id="details">Details</h2>
 
